# Project-Urban-Airflow-Pipeline

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  catalog.json  duckdb_api.py  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  pyproject.toml  run_results.json
.github/workflows/: ci.yml  deploy-dbt.yml  publish-dev-db.yml
analytics/: README.md
analytics/dbt/: .user.yml  profiles.airflow.yml  profiles.yml
analytics/dbt/urban_airflow_analytics/: README.md  dbt_project.yml  package-lock.yml  packages.yml  warehouse.duckdb
compiled/urban_airflow_analytics/tests/: test_dim_station_one_current_per_station.sql
infra_platform/: README.md  requirements.txt  setup.py
infra_platform/airflow/dags/: README.md  build_stg_models_weekly.py  dbt_ad_hoc_manually.py  dev_build_stg_models_weekly.py  france_holidays_quarterly.py  gbfs_backfill_producer_manually.py  gbfs_consumer_5_min.py  gbfs_consumer_dag.py  gbfs_loader_hourly.py  gbfs_station_information_monthly.py  gbfs_stream.py  gbfs_stream_every_min.py  open_meteo_hourly.py  openaq_hourly.py  openaq_spark_hourly.py  preprod_build_stg_models_weekly.py  prod_build_stg_models_daily.py  prod_build_stg_models_weekly.py  prod_dim_calendar_yearly.py  prod_dim_station_monthly.py  prod_station_status_daily.py  prod_station_status_weekly.py  (+7 more)
infra_platform/minio/: README.md  docker-compose.yml
infra_platform/redpanda/: console-config.yaml  docker-compose.yml
platform/: README.md
platform/minio/: docker-compose.yml
platform/redpanda/: console-config.yaml  docker-compose.yml
(+293 files in other folders)
