[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infra_platform"
version = "0.1.0"
description = "Internal pipelines for streaming & analytics"
authors = [{name="Dahee", email="kim01091@gmail.com"}]
dependencies = [
    "requests",
    "kafka-python",
    "pytz",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["infra_platform*"]

[tool.ruff]
line-length = 79
target-version = "py311"

exclude = [
    ".venv",
    "target",
    "dbt_packages",
    "logs",
]

[tool.ruff.lint]

select = ["E", "F", "I", "B", "UP"]

ignore = ["E501"]